--- a/readme
+++ b/readme
@@ -1,3 +1,29 @@
 https://regex101.com/
 
 http://play.inginf.units.it/
+------------------------------------------
+
+import java.util.regex.Pattern;
+class HelloWorld {
+    public static void main(String[] args) {
+        
+        String s = "[a]\na=1\nb=3\n[b]\nx=t\ny=u";
+        String[] arr = s.split("\n");
+        String section="";
+        String regex;
+        String param;
+        String value;
+        for (String a : arr){
+            regex = "\\[(\\w+)\\]";
+            if(Pattern.matches(regex, a)){
+                section = a.replaceAll(regex,"$1");
+            }
+            regex = "(\\w+)=(\\w+)";
+            if(Pattern.matches(regex, a)){
+                param = a.replaceAll(regex,"$1");
+                value = a.replaceAll(regex,"$2");
+                System.out.println(String.format("insert into table values ('c','%s', '%s', '%s');\n",section,param,value));    
+            }
+        }
+    }
+}
